--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>MobX Boilerplate</title>
+    <title>Antitreningi test</title>
+    <link rel="stylesheet" href="src/style.css" >
   </head>
   <body>
     <div id="root"></div>
